plugins {
    id 'java'
}

group 'diego.saez'
version '1.0-SNAPSHOT'
sourceCompatibility = JavaVersion.VERSION_17
targetCompatibility = JavaVersion.VERSION_17
repositories {
    mavenCentral()
}

dependencies {
    implementation 'com.github.auties00:whatsappweb4j:3.0-RC26'
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
}

test {
    useJUnitPlatform()
}
tasks.withType(JavaCompile).all {
    options.compilerArgs += ['--enable-preview']
}